fix title stretching

--- a/src/app/core/components/nav/nav.component.scss
+++ b/src/app/core/components/nav/nav.component.scss
@@ -32,7 +32,7 @@ mat-toolbar  {
 }
   #titleLogo1{
   max-height: 64px;
-  width: 100%;
+ 
   // max-width: 400px;
 }
 }
@@ -40,9 +40,9 @@ mat-toolbar  {
 //   font-size: 12px;
 // }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 380px) {
   #titleLogo1{
- 
+  width: 100%;
 }
   
 }
